# RustyStore

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  flake.nix
.github/workflows/: tests.yaml
src/: commands.rs  db.rs  main.rs  parser.rs
src/commands/: mod.rs
tests/: get_and_set.rs  main.rs  ping.rs  server.rs  utils.rs
