[package]
name = "rusty-store"
version = "0.1.0"
authors = ["Antoine Cheneau <antoine.cheneau@outlook.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"

[dev-dependencies]
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
